fix: chips padding, margins and panel alignment.

--- a/src/sass_files/_variable.scss
+++ b/src/sass_files/_variable.scss
@@ -1,6 +1,6 @@
 // $color-primary: rgba(27, 101, 246, 1);
 $color-primary: rgb(26, 134, 235);
-$color-grey-light: rgba(150, 163, 187, 1);
+$color-grey-light: #cfd3d6;
 $danger-color: rgba(208, 21, 46, 1);
 $body-text-color: rgba(87, 59, 59, 0);
 $header-height: 50px;
