--- a/src/sass_files/components/_home-form.scss
+++ b/src/sass_files/components/_home-form.scss
@@ -3,7 +3,8 @@
 }
 
 .file-container {
-   overflow: hidden;
+  padding: 10px 5px;
+  overflow: hidden;
 }
 
 .form {
@@ -17,19 +18,19 @@
 }
 
 .chip {
-  display: inline-block;
   padding: 0 15px;
+  margin-bottom: 10px;
   height: 25px;
   font-size: 10px;
   border-radius: 50px;
   background-color: #f1f1f1;
 
   &__filename {
-      width: 60px;
-      text-align: center;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
+    width: 60px;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   &__more-files {
@@ -38,12 +39,18 @@
 }
 
 .closebtn {
-    color: #888;
-    font-weight: bold;
-    cursor: pointer;
-    font-size: 15px;
-  }
-  
-  .closebtn:hover {
-    color: #000;
-  }
+  color: #888;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 15px;
+}
+
+.closebtn:hover {
+  color: #000;
+}
+
+.file-container__separator {
+  padding: 0;
+  margin: 0;
+  border-bottom: 1px solid $color-grey-light;
+}
