--- a/src/sass_files/components/_panel.scss
+++ b/src/sass_files/components/_panel.scss
@@ -1,13 +1,13 @@
 .panel {
   position: absolute;
-  left: 15%;
-  top: -10%;
-  height: 120%;
-  width: 60%;
+  left: 0%;
+  top: 0%;
+  overflow-x: hidden;
   overflow-y: auto;
   background-color: white;
   z-index: 1000;
   box-shadow: 0 1rem 1rem rgba($color: #000000, $alpha: 0.5);
+
 
   &__filename {
       font-size: 1.5rem;
