--- a/src/sass_files/style.css
+++ b/src/sass_files/style.css
@@ -23,35 +23,11 @@
   .cross-button:hover {
     color: black; }
 
-.chip {
-  display: inline-block;
-  padding: 0 15px;
-  height: 25px;
-  font-size: 10px;
-  border-radius: 50px;
-  background-color: #f1f1f1; }
-  .chip__filename {
-    width: 60px;
-    text-align: center;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap; }
-  .chip__more-files {
-    cursor: pointer; }
-
-.closebtn {
-  color: #888;
-  font-weight: bold;
-  cursor: pointer;
-  font-size: 15px; }
-
-.closebtn:hover {
-  color: #000; }
-
 .home-form-card {
   height: 60vh; }
 
 .file-container {
+  padding: 10px 5px;
   overflow: hidden; }
 
 .form__container {
@@ -60,8 +36,8 @@
     height: inherit; }
 
 .chip {
-  display: inline-block;
   padding: 0 15px;
+  margin-bottom: 10px;
   height: 25px;
   font-size: 10px;
   border-radius: 50px;
@@ -83,6 +59,11 @@
 
 .closebtn:hover {
   color: #000; }
+
+.file-container__separator {
+  padding: 0;
+  margin: 0;
+  border-bottom: 1px solid #cfd3d6; }
 
 *,
 *::before,
@@ -275,10 +256,9 @@ body {
 
 .panel {
   position: absolute;
-  left: 15%;
-  top: -10%;
-  height: 120%;
-  width: 60%;
+  left: 0%;
+  top: 0%;
+  overflow-x: hidden;
   overflow-y: auto;
   background-color: white;
   z-index: 1000;
